# Aether

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/bootstrap/: application.py  builder.py
app/cli/: main.py  parser.py
app/cli/commands/: chat.py  doctor.py  version.py
app/config/: config.py  loader.py  settings.yaml
app/core/: engine.py  exceptions.py  prompt_builder.py  session.py
app/debug/: collector.py  models.py  renderer.py
app/diagnostics/: __init__.py  checks.py  doctor.py  models.py  renderer.py
app/embedding/: base.py  factory.py  ollama.py
app/llm/: base.py  factory.py  models.py  ollama.py
app/logger/: config.py  logger.py
app/memory/: consolidator.py  extractor.py  manager.py  models.py  retrieval.py  summarizer.py
app/memory/stores/: base.py  json_store.py
app/session/: manager.py
app/session/stores/: base.py  json_store.py
app/vectorstore/: base.py  in_memory.py
docs/: ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  LEARNING_PATH.md  PROJECT_MASTER.md  ROADMAP.md  TOOLS.md
docs/journal/: 001-project-foundation.md
tests/: conftest.py
tests/fakes/: fake_llm.py
tests/integration/: test_conversation_flow.py
tests/unit/: test_application.py  test_builder.py  test_debug_collector.py  test_debug_models.py  test_debug_renderer.py  test_diagnostic_renderer.py  test_diagnostics_checks.py  test_diagnostics_models.py  test_doctor.py  test_engine.py  test_factory.py  test_fake_llm.py  test_prompt_builder.py  test_sanity.py  test_session.py
tests/unit/embedding/: test_ollama.py  (+1 more)
(+10 files in other folders)
