[project]
name = "aether"
version = "0.1.0"
description = "A modular, local-first AI engineering platform."
readme = "README.md"
requires-python = ">=3.12"

authors = [
{ name = "Rishab Goel" }
]


[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]